--- a/server/damn/Damn - Digital Hub.html
+++ b/server/damn/Damn - Digital Hub.html
@@ -511,7 +511,7 @@
               <div style="width: 100%; height: 579px; z-index: 200">
                 <iframe
                   id="canvas"
-                  src="http://localhost:3000/?model=Mug"
+                  src="https://damn-3dproduct-mpb8.vercel.app/?model=Mug"
                   width="100%"
                   height="100%"
                 ></iframe>
