--- a/server/public/index.html
+++ b/server/public/index.html
@@ -508,10 +508,13 @@
               <div class="preview-price" style="margin-bottom: 10px">
                 €24.99
               </div>
-              <div style="width: 100%; height: 579px; z-index: 200">
+              <div
+                id="iframe_div"
+                style="width: 100%; height: 579px; z-index: 200"
+              >
                 <iframe
                   id="canvas"
-                  src="https://damn-3dproduct-mpb8.vercel.app/?model=Mug"
+                  src="http://localhost:3000/?model=Mug"
                   width="100%"
                   height="100%"
                 ></iframe>
