--- a/server/public/index.html
+++ b/server/public/index.html
@@ -970,13 +970,28 @@
                 <div class="control-group">
                   <label class="control-label">Model Rotation</label>
                   <div class="control-buttons">
-                    <button class="control-btn" id="auto-rotate-btn">
+                    <button
+                      class="control-btn"
+                      id="auto-rotate-btn"
+                      style="width: 100%"
+                    >
                       Auto Rotate
                     </button>
-                    <button class="control-btn" id="reset-view-btn">
+                    <button
+                      class="control-btn"
+                      id="reset-view-btn"
+                      style="width: 100%"
+                    >
                       Reset View
                     </button>
                   </div>
+                  <button
+                    class="control-btn"
+                    id="export-view-btn"
+                    style="width: 100%; margin-top: 10px"
+                  >
+                    Export
+                  </button>
                 </div>
               </div>
             </div>
