--- a/server/public/index.html
+++ b/server/public/index.html
@@ -514,7 +514,7 @@
               >
                 <iframe
                   id="canvas"
-                  src="http://localhost:3000/?model=Mug"
+                  src="https://damn-3dproduct-mpb8.vercel.app/?model=Mug"
                   width="100%"
                   height="100%"
                 ></iframe>
