increaese auto rotate speed

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -971,11 +971,11 @@
                   <label class="control-label">Model Rotation</label>
                   <div class="control-buttons">
                     <button
-                      class="control-btn"
+                      class="control-btn active"
                       id="auto-rotate-btn"
                       style="width: 100%"
                     >
-                      Auto Rotate
+                      Stop Rotate
                     </button>
                     <button
                       class="control-btn"
