--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,14 +12,12 @@
     <script src="./Damn - Digital Hub_files/OBJLoader.js"></script>
     <script src="./Damn - Digital Hub_files/OrbitControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
-    <link rel="stylesheet" href="coloris.min.css" />
-    <script src="coloris.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css"
     />
     <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <style id="chromane_style">
       body.chromane_rec_nofollow_link_highlighting_enabled a[rel*="nofollow"] {
         margin-right: 8px;
