--- a/server/public/index.html
+++ b/server/public/index.html
@@ -802,11 +802,17 @@
                         height: 30px;
                         border-radius: 10px;
                         padding-inline: 10px;
+                        cursor: pointer;
                       "
                     >
-                      <select>
-                        <option>System UI</option>
-                      </select>
+                      <div
+                        style="width: 100%; height: 100%; place-content: center"
+                      >
+                        <span class="selected-font">System UI</span>
+                      </div>
+                      <div class="custom-dialog">
+                        <ul></ul>
+                      </div>
                     </div>
                   </div>
                   <div class="control-group">
